style wrap fixed and refresh list after copy product

--- a/master_modules/my_ang_boot/client/main.scss
+++ b/master_modules/my_ang_boot/client/main.scss
@@ -155,6 +155,6 @@ i span {
   }
 }
 
-#wrap {
+div#wrap {
   padding-bottom: 50px;
 }
